<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/LiViColor"
    tools:context=".ui.LikeActivity">

    <LinearLayout
        android:id="@+id/livi_title_bar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal|top"
        android:background="@color/LiViColor" >

        <ImageView
            android:id="@+id/livi_logo"
            android:layout_width="86dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:src="@drawable/livi_logo_transparent"
            android:contentDescription="@string/logo_content_description"
            android:background="@color/LiViColor" />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/livi_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:background="@color/LiViColor"
            android:text="@string/livi_title"
            style="@style/TextViewOutlineShadow" />
    </LinearLayout>

    <TextView
        android:id="@+id/livi_tracking_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        style="@style/TextViewOutlineShadow"
        android:textColor="@android:color/white"
        android:background="@color/LiViColor" />

    <Button
        android:id="@+id/livi_cancel_disabled_tracking_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/livi_tracking_text_view"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:text="@string/cancel_disabled_tracking_like_button"
        android:textColor="@color/LiViButtonTextColor"
        android:textAllCaps="false"
        android:onClick="cancelDisabledLikeTracking"
        android:background="@drawable/like_button" />

    <LinearLayout
        android:id="@+id/livi_disable_tracking_group"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/livi_tracking_text_view"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/LiViColor"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/livi_disable_tracking_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/disable_tracking_text"
            android:background="@color/LiViColor"
            android:textColor="@android:color/white" />

            <LinearLayout
            android:id="@+id/livi_disable_buttons"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/LiViColor" >

                <Button
                    android:id="@+id/livi_disable_tracking_button_1h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/disable_like_button_1h"
                    android:textColor="@color/LiViButtonTextColor"
                    android:textAllCaps="false"
                    android:onClick="disableLikeTracking"
                    android:tag="ONE_HOUR"
                    android:background="@drawable/like_button" />

                <Button
                    android:id="@+id/livi_disable_tracking_button_12h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/disable_like_button_12h"
                    android:textColor="@color/LiViButtonTextColor"
                    android:textAllCaps="false"
                    android:onClick="disableLikeTracking"
                    android:tag="TWELVE_HOURS"
                    android:background="@drawable/like_button" />

                <Button
                    android:id="@+id/livi_disable_tracking_button_24h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/disable_like_button_24h"
                    android:textColor="@color/LiViButtonTextColor"
                    android:textAllCaps="false"
                    android:onClick="disableLikeTracking"
                    android:tag="TWENTY_FOUR_HOURS"
                    android:background="@drawable/like_button" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/livi_show_user_id_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/show_user_id_action"
        android:textAllCaps="false"
        android:textColor="@color/LiViButtonTextColor"
        android:onClick="showUserIdDialog"
        android:background="@drawable/like_button" />
</RelativeLayout>
